using System;
public enum ProductCategory{OutdoorToys , EducationalToys ,PretendToys }
public enum MachineStatus { Stopped, Running, Maintenance }
public enum MachineCondition { Excellent, Good, Worn, Critical }
public enum EmployeeRole { Director, ProductionManager, Engineer, Technician, MachineOperator, SalesAgent }
public enum ProductionOrderStatus { Created, InProgress, Completed }
public enum Priority { Low, Medium, High }
